Corregí el idioma

--- a/digital_events_repository/web/SI/administrador/inventario/inventario.xhtml
+++ b/digital_events_repository/web/SI/administrador/inventario/inventario.xhtml
@@ -128,7 +128,7 @@
                                             </h:commandLink>&nbsp;&nbsp;
                                             <a class="btn btn-info" href="registrar.xhtml">
                                                 <i class="material-icons movericon">inventory</i>
-                                                <span>Añadir Material</span>
+                                                <span>#{administrador_inventario.lbl_add_material}</span>
                                             </a>
                                         </div>
                                     </div>
