--- a/digital_events_repository/web/SI/administrador/eventos/eventos.xhtml
+++ b/digital_events_repository/web/SI/administrador/eventos/eventos.xhtml
@@ -112,7 +112,7 @@
                                     <div class="row">
                                         <div class="col-9">
                                             <h4 class="card-title">#{administrador_eventos.lbl_grafico_eventos}</h4>
-                                            <p class="card-category">#{administrador_eventos.lbl_aqui_encontraras_grafrico}s</p>
+                                            <p class="card-category">#{administrador_eventos.lbl_aqui_encontraras_grafrico}</p>
                                         </div>
                                         
                                     </div>
