1. AGREGUE LA BASE DEL FORMULARIO SOLICITUD. (falta terminar) 2. HICE PULL Y ANEXE EL NUEVO MODELO (Error en registro usuarios y la internacionalizacion esta defectuosa. No muestras muchos campos...).

--- a/digital_events_repository/web/SI/administrador/usuarios/index.xhtml
+++ b/digital_events_repository/web/SI/administrador/usuarios/index.xhtml
@@ -232,7 +232,7 @@
                                         <div class="col-6">
                                             <a class="btn btn-info" href="registrar.xhtml">                                                     
                                                 <i class="material-icons movericon">person_add</i>
-                                                <span><#{administrador_usuarios.lbl_anadir_tipos}/span>
+                                                <span>#{administrador_usuarios.lbl_anadir_tipos}</span>
                                             </a>
                                         </div>
                                     </div>
