--- a/digital_events_repository/web/SI/administrador/usuarios/registrar.xhtml
+++ b/digital_events_repository/web/SI/administrador/usuarios/registrar.xhtml
@@ -58,7 +58,7 @@
                                                                  class="form-control" a:required=""
                                                                  a:type="date"
                                                                  a:aria-invalid="false"
-                                                                 a:placeholder="#{usuarioController.nuevoUsuario.lbl_ingrese_su_fecha}">
+                                                                 a:placeholder="#{administrador_usuarios.lbl_ingrese_su_fecha}">
                                                         <f:convertDateTime pattern="yyyy-MM-dd"/>
                                                     </h:inputText>                                                     
                                                 </div>
