--- a/digital_events_repository/web/SI/administrador/ventas/registrar.xhtml
+++ b/digital_events_repository/web/SI/administrador/ventas/registrar.xhtml
@@ -22,61 +22,118 @@
                 <div class="col-md-6"> 
                     <h:messages showDetail="true" styleClass="alert" style="list-style: none; padding: 0px; display: block" infoClass="alert-success" errorClass="alert-danger"/>
                 </div>
-
                 <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="card">
-                                <h:form>
-                                    <div class="card-header card-header-success colorc">
-                                        <div class="row">
-                                            <div class="col-12">
-                                                <h4 class="card-title">Formulario Nuevo Solicitud</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="card-body">
-                                        <h:form id="formNuevaSolicitud" prependId="false" a:novalidate="novalidate" class="row">
-                                            <div class="col-12">
-                                                <div class="form-group">
-                                                    <h:inputText id="usuariosId" value="#{solicitudController.nuevaSolicitud.usuariosId}"
-                                                                 a:type="number"
-                                                                 class="form-control"
-                                                                 a:placeholder="ID USuario" required=""/>  
+                    <div class="card">
+                        <div class="wrapper1">
+                            <div class="image-holder">
+                                <img class="img1" src="#{request.contextPath}/resources/img/form-wizard.jpg" alt=""/>
+                            </div>
+                            <div class="form-content">
+                                <h:form id="formNuevaSolicitud" prependId="false" a:novalidate="novalidate">
+                                    <div id="wizard">
+                                        <h4></h4>
+                                        <section>
+                                            <h3>Event Information</h3>
+                                            <div class="info">
+                                                <div class="info-item">
+                                                    <span class="lnr lnr-calendar-full"></span>
+                                                    <span class="unit">Date:</span>
+                                                    August 1 @ 8:00 am
                                                 </div>
-                                                <div class="form-group">
-                                                    <h:selectOneMenu id="tipoEvento" value="#{solicitudController.nuevaSolicitud.tipoEvento}"
-                                                                     class="form-control">
-                                                        <f:selectItem itemValue="" itemLabel="Seleccione un tipo de evento"/>
-                                                        <f:selectItems value="#{solicitudController.tipoEventoList}" var="t" itemLabel="#{t.tipo}"/>
-                                                    </h:selectOneMenu>
+                                                <div class="info-item">
+                                                    <span class="lnr lnr-clock"></span>
+                                                    <span class="unit">Time:</span>
+                                                    8:00 am - 5:00 pm
                                                 </div>
-                                                <div class="form-group">
-                                                    <h:inputText id="direccion" value="#{solicitudController.nuevaSolicitud.direccion}"
-                                                                 a:type="text"
-                                                                 class="form-control"
-                                                                 a:placeholder="Ingrese Direccion" required=""/>  
+                                                <div class="info-item">
+                                                    <span class="lnr lnr-apartment"></span>
+                                                    <span class="unit">Venue:</span>
+                                                    National Conference
                                                 </div>
-                                                <div class="form-group">
-                                                    <label for="fechaReserva" class="control-label mb-1">Fecha y Hora Reserva: </label>
-                                                    <p:calendar id="fechaReserva" value="#{solicitudController.nuevaSolicitud.fechaReserva}" showOn="button"
-                                                                pattern="yyyy-MM-dd HH:mm:ss"/>
+                                                <div class="info-item">
+                                                    <span class="lnr lnr-map"></span>
+                                                    <span class="unit">Address:</span>
+                                                    No 40 Baria Sreet 133/2
                                                 </div>
-                                                <div class="form-group border-1"> 
-                                                    <label for="especificaciones" class="control-label mb-1">Espeficicaciones Cliente</label>
-                                                    <h:inputTextarea id="especificaciones" value="#{solicitudController.nuevaSolicitud.especificaciones}"
-                                                                     a:type="text"
-                                                                     class="form-control border" required=""/>  
+                                                <div class="info-item">
+                                                    <span class="lnr lnr-earth"></span>
+                                                    <span class="unit">Website: </span>
+                                                    Info@yourwev.com
                                                 </div>
                                             </div>
-                                        </h:form>
-                                    </div>
-                                    <div class="card-footer">                            
-                                        <h:commandLink action="#{solicitudController.registrar()}" class="btn btn-primary btn-block">Agregar Solicitud</h:commandLink> 
+                                        </section>
+                                        <h4></h4>
+                                        <section>
+                                            <h3>Set The Event</h3>
+                                            <div class="form-group">
+                                                <div class="form-price">
+                                                    <label for="">Price:</label>
+                                                    <span>$270</span>
+                                                </div>
+                                                <div class="form-select">
+                                                    <label for="">People:</label>
+                                                    <div class="form-holder">
+                                                        <select name="" id="" class="form-control">
+                                                            <option value="1" class="option">1</option>
+                                                            <option value="2" class="option">2</option>
+                                                            <option value="3" class="option">3</option>
+                                                            <option value="4" class="option">4</option>
+                                                            <option value="5" class="option">5</option>
+                                                            <option value="6" class="option">6</option>
+                                                            <option value="7" class="option">7</option>
+                                                            <option value="8" class="option">8</option>
+                                                            <option value="9" class="option">9</option>
+                                                            <option value="10" class="option">10</option>
+                                                        </select>
+                                                        <i class="zmdi zmdi-chevron-down"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-wrapper">
+                                                <label for="">Name:</label>
+                                                <input type="text" class="form-control"/>
+                                            </div>
+                                            <div class="form-wrapper">
+                                                <label for="" class="label-input">E-mail:</label>
+                                                <input type="text" class="form-control"/>
+                                            </div>
+                                            <div class="form-wrapper">
+                                                <label for="" class="label-input">Phone:</label>
+                                                <input type="text" class="form-control"/>
+                                            </div>
+                                            <div class="form-wrapper last">
+                                                <label for="" class="label-input">Address:</label>
+                                                <input type="text" class="form-control"/>
+                                            </div>
+                                        </section>
+                                        <h4></h4>
+                                        <section>
+                                            <h3 style="margin-bottom: 50px;">Request from You</h3>
+                                            <div class="request">
+                                                <div class="special-request">
+                                                    <label for="">Special Request:</label>
+                                                    <input type="text" class="form-control"/>
+                                                </div>
+                                                <input type="text" class="form-control" style="width: 100%;"/>
+                                                <div class="question-request"><span>Would you like your event staffed? </span>
+                                                    <input type="text" class="form-control" style="display: inline-block;"/>
+                                                    <span>How many associates? </span>
+                                                    <input type="text" class="form-control" style="display: inline-block;"/>
+                                                    <span>(Adiditional rates will apply for events requiring staff)</span>
+                                                </div>
+                                            </div>
+                                            <div class="checkbox1">
+                                                <label>
+                                                    <input type="checkbox" checked=""> Please accept terms and conditions ?</input>
+                                                    <span class="checkmark"></span>
+                                                </label>
+                                            </div>
+                                        </section>
                                     </div>
                                 </h:form>
                             </div>
-                        </div>
+                        </div> 
+
                     </div>
                 </div>
             </div>
