--- a/digital_events_repository/web/SI/index.xhtml
+++ b/digital_events_repository/web/SI/index.xhtml
@@ -172,18 +172,22 @@
             <div class="card-header card-header-primary">
                 <h4 class="card-title"><strong>TENEMOS LOS MEJORES SHOWS Y PERSONAJES PARA CADA OCASIÓN</strong></h4>
             </div>
-            <div class="card-body">
+            <div class="card-body text-center">
                 <h:form>
                     <p class="card-text">Diseñados especialmente para eventos infantiles de integración y final de año, día del niño, fiestas temáticas infantiles, atracciones mecánicas, show´s musicales, mundoIinflable, eventos navideños entre otros.</p>
-                    <h:commandLink class="td-actions text-right btn btn-danger" actionListener="#"
-                                   a:data-toggle="modal" a:data-target="#modalGaleria" rel="tooltip" >
-                        <f:ajax render=":modalGaleriaContent"/>
-                        <i class="material-icons movericon">collections</i>
-                        <span>VER GALERIA</span>
-                    </h:commandLink>
+                    <div class="container-fluid">
+                        <div class="row">
+                             
+                        </div>
+                        <div class="row">
+
+                        </div>
+                    </div>
                 </h:form>
             </div>
         </div>
+
+
 
 
 
@@ -218,6 +222,11 @@
                             <div class="modal-body">
                                 <div class="embed-responsive embed-responsive-16by9">
                                     <iframe class="embed-responsive-item" src="" id="video"  allowscriptaccess="always">></iframe>
+                                    <div id="myModal" class="modal">
+                                        <span class="close">&times;</span>
+                                        <img class="modal-content" id="img01"/>
+                                        <div id="caption"></div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="modal-footer">
